#ifndef ULTRAVERSE_STATE_PROTO_FWD_HPP
#define ULTRAVERSE_STATE_PROTO_FWD_HPP

namespace ultraverse::state::v2::proto {
class StateData;
class StateRangeInterval;
class StateRange;
class StateItem;
class RowAlias;
class RowClusterRangeEntry;
class RowClusterRanges;
class RowClusterAliasEntry;
class RowCluster;
class StateHash;
class QueryUserVar;
class QueryStatementContext;
class Query;
class Transaction;
class ColumnDependencyNode;
class ColumnDependencyGraphEntry;
class ColumnDependencyGraph;
class TableDependencyGraphEntry;
class TableDependencyGraph;
class StateClusterRangeEntry;
class StateClusterCluster;
class StateCluster;
class ProcCall;
class StateChangeReplayPlan;
}

#endif // ULTRAVERSE_STATE_PROTO_FWD_HPP
